M2_TIIR_2018_2019/IFI/kube/HelloWorld/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.tiir.ovh/jonathan.soleillet/ifi-helloworld-js-ls/backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: regcred
