M2_TIIR_2018_2019/IFI/kube/HelloWorld/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.tiir.ovh/jonathan.soleillet/ifi-helloworld-js-ls/frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      imagePullSecrets:
        - name: regcred
