M2_TIIR_2018_2019/IFI/kube/HelloWorld/service_backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
