M2_TIIR_2018_2019/IFI/kube/HelloWorld/service_frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
