M2_TIIR_2018_2019/IFI/kube/HelloWorld/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: helloworld
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: groupe8.tiir.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: backend-service
          servicePort: 8080
